<resources>
    <string name="app_name">Android_Photo_Editor</string>
    <string name="user_name">USER NAME</string>
    <string name="name_text">Name:</string>
    <string name="email_text">Email:</string>
    <string name="register_button_text">Register Account</string>
    <string name="password_rules_text">password must be 8 characters or more</string>
    <string name="password_text">Password:</string>
    <string name="user_name_text">User Name:</string>
    <string name="sign_out_button_text">Sign Out</string>
    <string name="app_title">*INSERT NAME HERE* PHOTO EDITOR</string>
    <string name="photo_gallery_button_text">Photo Gallery</string>
    <string name="new_photo_button_text">Take New Picture</string>
    <string name="facebook_app_id">2172931259637005</string>
    <string name="fb_login_protocol_scheme">fb2172931259637005</string>
    <string name="existing_photo_button_text">Edit Existing Photo</string>
    <string name="completed_photo_text">You\'re all set!</string>
    <string name="update_profile_button_text">update profile</string>
    <string name="edit_photo_button_text">Edit Photo</string>
    <string name="cancel_button_text">cancel</string>
    <string name="next_button_text">Next</string>
</resources>
